# Emery

./: .gitignore  AGENTS.md  A_PLUS_TRACKER.md  CLAUDE.md  Cargo.toml  README.md  UX_AUDIT.md  debug-worktree-project-id.md  debug-worktree-session.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.git-hooks/: pre-commit
.github/workflows/: ci.yml
apps/emery-client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/emery-supervisor/: Cargo.toml
apps/euri-client/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
apps/euri-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/euri-client/src-tauri/capabilities/: default.json
apps/euri-client/src-tauri/src/: main.rs
apps/euri-supervisor/: Cargo.toml
crates/emery-mcp/: Cargo.toml
crates/emery-mcp/src/: main.rs  rpc_client.rs
crates/emery-mcp/src/tools/: instructions.rs  knowledge.rs  librarian.rs  memory.rs  merge_queue.rs  mod.rs  project.rs  resolve.rs  session.rs  vault.rs  worktree.rs
crates/euri-mcp/: Cargo.toml
crates/supervisor-core/: Cargo.toml
crates/supervisor-core/examples/: embedding_smoke_test.rs
crates/supervisor-core/src/: agent_profile.rs  bootstrap.rs  diagnostics.rs  git.rs  lib.rs  models.rs  output_filter.rs  runtime.rs  schema.rs  service.rs  store.rs  supervisor.rs  vault.rs
crates/supervisor-core/src/embeddings/: anthropic.rs  memory_reconciler.rs  mod.rs  pipeline.rs  ranker.rs  voyage.rs
crates/supervisor-core/src/librarian/: audit.rs  client.rs  config.rs  critic.rs  digest.rs  extract.rs  feedback.rs  gardener.rs  mod.rs  orchestrator.rs  prompts.rs  triage.rs
crates/supervisor-core/src/migrations/app/: 0001_initial.sql  0002_session_spec_fields.sql  0003_planning_assignment_constraints.sql  0004_workflow_reconciliation_shape.sql  0005_merge_queue.sql  0006_dispatch_group.sql  0007_safety_modes.sql  0008_project_instructions.sql  0009_default_model.sql  0010_inbox.sql  0011_agent_templates.sql  0012_model_defaults.sql  0013_vault.sql  0014_wcp_namespace.sql  0015_mcp_servers.sql  0016_worktree_sort_order.sql
crates/supervisor-core/src/migrations/knowledge/: 0001_initial.sql  0002_namespace_scoping.sql  0003_embeddings.sql  0004_memories.sql  0005_librarian_audit.sql  0006_gardener.sql  0007_librarian_feedback.sql
crates/supervisor-ipc/: Cargo.toml
crates/wcp-import/: Cargo.toml
crates/wcp-import/src/: main.rs
docs/: a-plus-delivery.md  agentic-workflows-plan.md  backup-plan.md  cli-agent-lab.md  cli-agent-orchestration-research.md  cli-agent-orchestration.md  emery-backend-salvage-audit.md  emery-client-read-model-and-api-mapping.md  emery-domain-schema-plan.md  emery-frontend-information-architecture.md  emery-supervisor-rpc-contract.md  emery-tauri-client-architecture.md  euri-backend-salvage-audit.md  euri-client-read-model-and-api-mapping.md  euri-domain-schema-plan.md  euri-frontend-information-architecture.md  euri-supervisor-rpc-contract.md  euri-tauri-client-architecture.md  layout-redesign-spec.md  librarian-smoke-test.md  observability.md  refresh-architecture.md  session-runtime-contract.md  soul-md-design.md  ux-flow-analysis.md  vault-plan.md
docs/audit/: 00-index.md  (+8 more)
scripts/: check-bundle-budgets.mjs  check-repo-health.mjs  claude-agent-sdk-worker.mjs  codex-sdk-worker.mjs  fresh-launch.ps1  inspect-claude-procs.ps1  install-stable.ps1  launch-dev.ps1  promote-to-stable.ps1  rebuild-and-run.ps1  run-prod.ps1  run-stable.ps1  run-tauri.ps1  start-emery-client-hidden.ps1  start-euri-client-hidden.ps1  stop-emery-client-hidden.ps1  stop-euri-client-hidden.ps1  test-all.ps1
src/: App.tsx  diagnostics.ts  diagnosticsRuntime.ts  fonts.ts  index.css  main.tsx  perf.ts  sessionHistory.test.ts  sessionHistory.ts  themeEngine.ts  themes.ts  types.ts  worktrees.test.ts  worktrees.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: agent_message_broker.rs  agent_message_store.rs  agent_signal_store.rs  app_settings_store.rs  backup.rs  backup_scheduler.rs  db.rs  diagnostics.rs  document_store.rs  embeddings.rs  embeddings_worker.rs  error.rs  file_browser.rs  launch_profile_store.rs  lib.rs  main.rs  project_store.rs  r2_client.rs  runtime_cleanup.rs  session.rs  session_api.rs  session_cleanup.rs  session_host.rs  session_reconciliation.rs  session_recovery.rs  session_store.rs  supervisor_api.rs  supervisor_mcp.rs  vault.rs  work_item_store.rs  workflow.rs  worktree_store.rs
src-tauri/src/db/: app_state_core_records.rs  app_state_feature_services.rs  app_state_session_coordination.rs
src-tauri/src/session/: session_poller.rs  session_runtime.rs  session_transport.rs
src-tauri/src/session_host/: hosted_session.rs  session_artifacts.rs  session_launch_command.rs  session_launch_env.rs  session_launch_support.rs  session_registry.rs  session_runtime_events.rs  session_runtime_watch.rs
src-tauri/src/workflow_defaults/workflows/: adr-authoring.yaml  data-analysis.yaml  documentation-pass.yaml  feature-dev.yaml  research-brief.yaml
src-tauri/tests/: sqlite_vec_spike.rs  supervisor_client_recovery.rs
(+233 files in other folders)
