[workspace]
members = [
    "apps/emery-supervisor",
    "apps/emery-client/src-tauri",
    "crates/supervisor-core",
    "crates/supervisor-ipc",
    "crates/emery-mcp",
    "crates/wcp-import",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
interprocess = "2.2.3"
portable-pty = "0.9.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
tauri = "2.10.3"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
