[package]
name = "project-commander"
version = "0.1.0"
description = "Project Commander desktop application"
authors = ["OpenAI Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "project-commander"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "project_commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fern = "0.7"
chrono = "0.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.9.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tiny_http = "0.12"
base64 = "0.22"
dirs = "6"
notify = "6.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
