[package]
name = "emery-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "emery-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
interprocess.workspace = true
serde.workspace = true
serde_json.workspace = true
supervisor-core = { path = "../supervisor-core" }
