[package]
name = "supervisor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
portable-pty.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
