[package]
name = "wcp-import"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "wcp-import"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
serde_yaml = "0.9"
zip = "2"
regex = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
